[package]
name = "rabe-ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib","staticlib"]


[dependencies]
rabe = "0.2.6"
serde = "1.0.118"
serde_json = "1.0.60"
libc = "0.2.134"

[profile.release]
opt-level = 3
overflow-checks = false
lto = true
rpath = false
debug-assertions = false
panic = 'abort'
debug = false

[build-dependencies]
cbindgen = "0.20.0"